alright, so what the hell happened?
a) direct repository links are disliked by pip
b) google uploader crashed midway, resulting in hash-mismatches between files

--- a/general_website/templates/general_website/my_charts.html
+++ b/general_website/templates/general_website/my_charts.html
@@ -176,6 +176,7 @@
                     let json = JSON.parse(request.responseText);
 
                     console.log(json);
+                    // # googl, plz
 
                     setTimeout(()=>{
                         update_chart(element);
