fix cookie, fix name

--- a/general_website/templates/general_website/tears.html
+++ b/general_website/templates/general_website/tears.html
@@ -5,7 +5,7 @@
 
 {% block content %}
 
-<h1 class=" display-4 mb-3 text-center">{% trans 'Tears' %}</h1>
+<h1 class=" display-4 mb-3 text-center">{% trans 'T-List' %}</h1>
 
 <p>
     {% trans "Everyone's doing a list right now? Here I present my own Tear-List. And I assure you it's highly subjective and different for everyone." %}
@@ -16,7 +16,7 @@
     {% trans "All values are absolutely random and have no meaning." %}
 </p>
 
-<h3>{% trans 'Specs' %}</h3>
+<h3>{% trans 'Specs' %} <span onclick="resetTears();">🍪</span></h3>
 <div id="specs"></div>
 <span class="float-right" style="position: absolute; top: 800px; right: 30%; font-size: 5rem; transform: rotate(180deg); display: inline-block;">🤔</span>
 
