--- a/general_website/templates/general_website/my_charts.html
+++ b/general_website/templates/general_website/my_charts.html
@@ -8,7 +8,10 @@
 
 <h1>{% trans 'My Charts' %}</h1>
 
-<p class="text-muted">{% trans 'A list of my charts' %}</p>
+<div class="row">
+    <p class="text-muted col-8">{% trans 'A list of my charts' %}</p>
+    <p class="text-right col-4 monk-color">{{ charts | length }}<span class="priest-color">/</span>{{ user.max_charts }} <span class="priest-color" data-toggle="tooltip" data-placement="bottom" title="{% trans "You can free up slots by deleting charts." %}">?</span></p>
+</div>
 
 <div class="row">
 
