add patreon link to introduction paragraph

--- a/general_website/templates/general_website/index.html
+++ b/general_website/templates/general_website/index.html
@@ -42,8 +42,8 @@
 <p>
 {% blocktrans %}
 This site provides an overview about several simulateable aspects for almost all specs in World of Warcraft
-using <a href="http://www.simulationcraft.org/" target="blank">SimulationCraft</a>. These overviews
-are an entry point. <span class="monk-color">You can also generate your own charts by becoming a Patreon.</span>
+using <a href="http://www.simulationcraft.org/">SimulationCraft</a>. These overviews
+are an entry point. <span class="monk-color">You can also generate your own charts by becoming a <a href="https://www.patreon.com/bloodmallet">Patreon</a>.</span>
 {% endblocktrans %}
 </p>
 <p>
