--- a/general_website/templates/general_website/my_charts.html
+++ b/general_website/templates/general_website/my_charts.html
@@ -35,9 +35,7 @@
                     {{ chart.simulation_type }}<br/>
                     {{ chart.fight_style }}
                 </p>
-                {% if chart.failed %}
-                    <button class="btn btn-outline-danger delete_button" data-toggle="modal" data-target="#deleteModal" data-value="{{ chart.id }}" id="delete_button_{{ chart.id }}">{% trans 'Delete' %}</button>
-                {% elif chart.result %}
+                {% if chart.failed or chart.result %}
                     <a href="{% url 'chart' chart.id %}" class="btn btn-primary">{% trans 'View' %}</a>
                     <button class="btn btn-outline-danger delete_button" data-toggle="modal" data-target="#deleteModal" data-value="{{ chart.id }}" id="delete_button_{{ chart.id }}">{% trans 'Delete' %}</button>
                 {% elif chart.queue %}
@@ -181,7 +179,9 @@
                 if (request.status === 200) {
                     let json = JSON.parse(request.responseText);
 
-                    if (json.result) {
+
+                    // TODO: there might actually be an error that aborted the simulation
+                    if (json.result || json.failed) {
                         // heureka, add view and delete buttons
                         element.classList.remove("unfinished-chart");
                         element.classList.remove("finished-chart");
