make some headlines weight less

--- a/general_website/templates/general_website/layout/nav_top.html
+++ b/general_website/templates/general_website/layout/nav_top.html
@@ -4,7 +4,7 @@
 {% comment %} <header> {% endcomment %}
     <nav class="navbar sticky-top navbar-expand-lg bg-dark navbar-dark top-nav light-border-bottom">
         <a class="navbar-brand" href="{% url 'index' %}">
-            <img src="{% static 'general_website/assets/bloodmallet.svg' %}" style="width: 35px; vertical-align:top;" /> <span id="brand-name">bloodmallet</span>
+            <img src="{% static 'general_website/assets/bloodmallet.svg' %}" style="width: 35px; vertical-align:top;" /> <span id="brand-name" style="font-weight:300;">bloodmallet</span>
         </a>
         <!-- Menu button if device is too small for full menu -->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTopMenu" aria-controls="navbarTopMenu"
