--- a/general_website/templates/general_website/my_charts.html
+++ b/general_website/templates/general_website/my_charts.html
@@ -6,7 +6,7 @@
 
 {% block content %}
 
-<h1>{% trans 'My Charts' %}</h1>
+<h1 class="mt-3 display-4">{% trans 'My Charts' %}</h1>
 
 <div class="row">
     <p class="text-muted col-8">{% trans 'A list of my charts' %}</p>
