--- a/general_website/templates/general_website/settings.html
+++ b/general_website/templates/general_website/settings.html
@@ -12,7 +12,7 @@
 
 {% block content %}
 
-<h1>{% trans "Settings" %}</h1>
+<h1 class="mt-3 display-4">{% trans "Settings" %}</h1>
 <p>{% trans "A settings page...more to come" %}</p>
 
 {% comment %}
