--- a/general_website/templates/general_website/privacy_policy.html
+++ b/general_website/templates/general_website/privacy_policy.html
@@ -7,7 +7,7 @@ Datenschutzerklärung
 
 {% block content %}
 
-<h1>Datenschutzerklärung</h1>
+<h1 class="mt-3 display-4">Datenschutzerklärung</h1>
 
 Datenschutz: Weisen Sie darauf hin, dass Sie Maßnahmen zum Datenschutz getroffen haben, also gespeicherte Daten nicht von unbefugten Dritten eingesehen werden können.
 
@@ -26,7 +26,7 @@ Urheber- und Kennzeichenrecht: Erläutern Sie, dass gekennzeichnete Inhalte den 
 <h2>{% trans "Google Analytics" %}</h2>
 <p>
     {% blocktrans %}
-    dev.bloodmallet.com would like to use <a href="https://support.google.com/analytics/answer/2763052">anonymized</a> <a href="https://marketingplatform.google.com/about/analytics/">Google Analytics (GA)</a>, to know how many people are using the website. You can either accept or reject this. Your choice will be saved on your device in a cookie.
+    bloodmallet.com would like to use <a href="https://support.google.com/analytics/answer/2763052">anonymized</a> <a href="https://marketingplatform.google.com/about/analytics/">Google Analytics (GA)</a>, to know how many people are using the website. You can either accept or reject this. Your choice will be saved on your device in a cookie.
     {% endblocktrans %}
 </p>
 <div class="btn-group float-right">
