--- a/general_website/templates/general_website/index.html
+++ b/general_website/templates/general_website/index.html
@@ -116,9 +116,9 @@ For indepth information about your spec use your theorycrafters guides linked be
 {% endblock %}
 
 {% block extraimport %}
-<script src="{% static 'general_website/js/navbar_class_menu.js' %}"></script>
+{% comment %} <script src="{% static 'general_website/js/navbar_class_menu.js' %}"></script> {% endcomment %}
 <script src="{% static 'general_website/js/class_spec_table.js' %}"></script>
-<script src="{% static 'general_website/js/chart_options.js' %}"></script>
+{% comment %} <script src="{% static 'general_website/js/chart_options.js' %}"></script> {% endcomment %}
 
 {% include 'general_website/layout/wowhead_tooltips.html' %}
 {% include 'general_website/layout/chart_import.html' %}
